2021-01-01  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

        * Copyright.txt: Copyright year updates and ChangeLog rotation for
        the new year.